# crypto-calculator

./: .gitignore  README.md  backend.sh  frontend.sh  notes.txt  pyproject.toml
backend/: main.py  requirements.txt
frontend/: package-lock.json  package.json
frontend/components/: CopyableInput.tsx
frontend/pages/: _app.tsx  index.tsx
tests/: crypto-example.py
