[build-system]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "crypto-calculator"
version = "0.1.0"
description = "Crypto Trading Calculator"
authors = [
    "Ivo Stoyanov <ivostoy@gmail.com>"
]
readme = "README.md"
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0"
fastapi = "^0.116.1"
uvicorn = "^0.15.0"
Pydantic = "^2.4.0"
python-multipart = "^0.0.20"
poetry-core = "^2.1.3"
quant = {path = "../quant", develop = true}

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -v -s"
